--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "@tanstack/react-query": "^5.75.5",
         "axios": "^1.9.0",
         "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
         "motion": "^12.10.4",
         "next": "15.3.2",
+        "next-view-transitions": "^0.3.4",
         "nextjs-toploader": "^3.8.16",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
